endpoint: list of books users have and the total income for each
