# models/book.go
@@ -1,8 +1,16 @@
 package models
 
 type Book struct {
-	ID     string  `json:"id"`
-	Title  string  `json:"title"`
-	Author string  `json:"author"`
-	Price  float64 `json:"price"`
+	ID        string  `json:"id"`
+	Title     string  `json:"title"`
+	Author    string  `json:"author"`
+	RentPrice float64 `json:"rent_price"`
+}
+
+type BookUserIncome struct {
+	ID          string     `json:"id"`
+	Title       string     `json:"title"`
+	Author      string     `json:"author"`
+	Users       []UserResp `json:"users"`
+	TotalIncome float64    `json:"total_income"`
 }
