# models/book_rent.go
@@ -2,11 +2,11 @@ package models
 
 import "time"
 
-type Record struct {
+type BookRent struct {
 	ID           string     `json:"id"`
 	UserID       string     `json:"user_id"`
 	BookID       string     `json:"book_id"`
-	DateBorrowed time.Time  `json:"date_borrowed"`
+	DateRented   time.Time  `json:"date_rented"`
 	DateReturned *time.Time `json:"date_returned"`
 	DueDate      time.Time  `json:"due_date"`
 }
