# transport/http/handler/book_rent.go
@@ -7,26 +7,26 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// @Summary Create Record
+// @Summary Create Book Rent
 // @Security ApiKeyAuth
-// @Tags record
-// @Description create record
-// @ID create-record
+// @Tags rent
+// @Description create book rent
+// @ID create-rent
 // @Accept  json
 // @Produce  json
-// @Param input body models.Record true "record info"
+// @Param input body models.BookRent true "rent info"
 // @Success 201 {string} string "id"
 // @Failure 400,404 {string} string "message"
 // @Failure 500 {string} string "message"
 // @Failure default {string} string "message"
-// @Router /record [post]
-func (h Manager) CreateRecord(c echo.Context) error {
-	var req models.Record
+// @Router /rent [post]
+func (h Manager) CreateBookRent(c echo.Context) error {
+	var req models.BookRent
 	if err := c.Bind(&req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
-	resp, err := h.srv.Record.Create(c.Request().Context(), &req)
+	resp, err := h.srv.BookRent.Create(c.Request().Context(), &req)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
@@ -34,29 +34,29 @@ func (h Manager) CreateRecord(c echo.Context) error {
 	return c.JSON(http.StatusCreated, resp)
 }
 
-// @Summary Update Record
+// @Summary Update Book Rent
 // @Security ApiKeyAuth
-// @Tags record
-// @Description update record
-// @ID update-record
+// @Tags rent
+// @Description update book rent
+// @ID update-rent
 // @Accept json
 // @Produce json
-// @Param record_id path string true "record id"
-// @Param input body models.Record true "record info"
+// @Param rent_id path string true "rent id"
+// @Param input body models.BookRent true "rent info"
 // @Success 200
 // @Failure 400,404 {string} string "message"
 // @Failure 500 {string} string "message"
 // @Failure default {string} string "message"
-// @Router /record/{record_id} [put]
-func (h Manager) UpdateRecord(c echo.Context) error {
+// @Router /rent/{rent_id} [put]
+func (h Manager) UpdateBookRent(c echo.Context) error {
 	id := c.Param("id")
 
-	var req models.Record
+	var req models.BookRent
 	if err := c.Bind(&req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
-	err := h.srv.Record.Update(c.Request().Context(), id, &req)
+	err := h.srv.BookRent.Update(c.Request().Context(), id, &req)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
@@ -64,19 +64,19 @@ func (h Manager) UpdateRecord(c echo.Context) error {
 	return c.NoContent(http.StatusOK)
 }
 
-// @Summary List Records
-// @Tags record
-// @Description list records
-// @ID list-records
+// @Summary List Book Rents
+// @Tags rent
+// @Description list book rents
+// @ID list-rents
 // @Accept json
 // @Produce json
-// @Success 200 {object} []models.Record
+// @Success 200 {object} []models.BookRent
 // @Failure 400,404 {object} string "message"
 // @Failure 500 {object} string "message"
 // @Failure default {object} string "message"
-// @Router /record [get]
-func (h Manager) ListRecords(c echo.Context) error {
-	resp, err := h.srv.Record.List(c.Request().Context())
+// @Router /rent [get]
+func (h Manager) ListBookRents(c echo.Context) error {
+	resp, err := h.srv.BookRent.List(c.Request().Context())
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
@@ -84,22 +84,22 @@ func (h Manager) ListRecords(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
-// @Summary Get Record
-// @Tags record
-// @Description get record by ID
-// @ID get-record
+// @Summary Get Book Rent
+// @Tags rent
+// @Description get book rent by ID
+// @ID get-rent
 // @Accept json
 // @Produce json
-// @Param record_id path string true "record id"
-// @Success 200 {object} models.Record
+// @Param rent_id path string true "rent id"
+// @Success 200 {object} models.BookRent
 // @Failure 400,404 {object} string "message"
 // @Failure 500 {object} string "message"
 // @Failure default {object} string "message"
-// @Router /record/{record_id} [get]
-func (h Manager) GetRecord(c echo.Context) error {
+// @Router /rent/{rent_id} [get]
+func (h Manager) GetBookRent(c echo.Context) error {
 	id := c.Param("id")
 
-	resp, err := h.srv.Record.Get(c.Request().Context(), id)
+	resp, err := h.srv.BookRent.Get(c.Request().Context(), id)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
@@ -107,23 +107,23 @@ func (h Manager) GetRecord(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
-// @Summary Delete record
+// @Summary Delete Book Rent
 // @Security ApiKeyAuth
-// @Tags record
-// @Description delete record by ID
-// @ID delete-record
+// @Tags rent
+// @Description delete book rent by ID
+// @ID delete-rent
 // @Accept json
 // @Produce json
-// @Param record_id path string true "record id"
+// @Param rent_id path string true "rent id"
 // @Success 200
 // @Failure 400,404 {object} string "message"
 // @Failure 500 {object} string "message"
 // @Failure default {object} string "message"
-// @Router /record/{record_id} [delete]
-func (h Manager) DeleteRecord(c echo.Context) error {
+// @Router /rent/{rent_id} [delete]
+func (h Manager) DeleteBookRent(c echo.Context) error {
 	id := c.Param("id")
 
-	err := h.srv.Record.Delete(c.Request().Context(), id)
+	err := h.srv.BookRent.Delete(c.Request().Context(), id)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
